# ComfyUI-OpenCut

./: ComfyUIOpenCut.py  README.md  __init__.py  package-lock.json  package.json  pyproject.toml
js/: main.js
js/assets/: main.css
opencut-ui/: 404.html  index.html  index.txt  manifest.dev.json  manifest.json  robots.txt  sitemap.xml
opencut-ui/404/: index.html
opencut-ui/_next/static/NYw2VZ10H0VP4lgWq7rVJ/: _buildManifest.js
opencut-ui/_next/static/Nk2EYB7B686Nxu5Ud2s-X/: _ssgManifest.js
opencut-ui/_next/static/RPJZQgRixRRoMP4N9Tf9Q/: _buildManifest.js
opencut-ui/_next/static/SEczCxFf_P0wsHmytW2TA/: _buildManifest.js
opencut-ui/_next/static/chunks/: 1088.f27b715d175c7b54.js  1088.f27b715d175c7b54.js.map  119-c7862c480bb99d0c.js  119-c7862c480bb99d0c.js.map  1436.b1e9053a756cef26.js  (+185 more)
opencut-ui/animation/: index.html  index.txt
opencut-ui/blog/: index.html  index.txt
opencut-ui/blog/crafting-beautiful-designs/: index.html  index.txt
opencut-ui/blog/webhooks/: index.html  index.txt
opencut-ui/blog/writing-engaging-copies/: index.html  index.txt
opencut-ui/contributors/: index.html  index.txt
opencut-ui/editor/: index.html  index.txt
opencut-ui/editor/default/: index.html  index.txt
opencut-ui/editor/new/: index.html  index.txt
opencut-ui/editor/untitled/: index.html  index.txt
opencut-ui/privacy/: index.html  index.txt
opencut-ui/projects/: index.html  index.txt
opencut-ui/roadmap/: index.html  index.txt
opencut-ui/terms/: index.html  index.txt
opencut-ui/why-not-capcut/: index.html  index.txt
src/: App.vue  main.ts
(+114 files in other folders)
